0.10.0 [in development]
Don't support SDL main application anymore. Only Qt.
The whole StelApp class is managed as a QGraphicsItem, inside a QGraphicsView.
Extracted deprecated sources from the core of stellarium.
Continued API cleaning.
Re-organized the source files into sub-directories.
Created the new GUI button bars based on QGraphicsView
Moved stars/planets halo rendering into SkyDrawer.

0.9.1 [2008-01-17]
Got rid of autoconf/automake (Hooray!)
Fixed a grid RA labeling bug.
Improved the plug-in managment.
Fixed nebula names loading (bug #1740287)
Recoded time methods based on Qt time function (this fixed bug #1740595, LANG=en_IN crash).
Use the new Grid class by Guillaume Chéreau for NebulaMgr.
Made StelUI and StelCommandMgr real StelModules.
Increased grid labeling brightness.
Fixed splash screen flickering and logo image truncation in full screen mode.
Fixed wrong nebula size (bug #1673142)
Fixed constellation art intensity bug (bug #1733482)
Got rid of all wstreamstring and therefore don't require STLPort anymore for MinGW compilation.
Added more command line options.
Re-coded StelAppQt4 init and deinit to prevent GLContext errors.
New config parameters for controlling star brigthness, size, color
Circles around telescope markers indicating ocular FOV
Applied patches for bugs #1769632 (bad init in get_tm_from_Julian), #1769584 (NebulaMgr.cpp reports wrong name on error) and #1758435 (segfault)
Fixed bug #1781617 (added altitude unit) and #1751366 (segfault when changing projection mode).
StelModule now derive from QObject.
First testing new script engine based on QObject slots.
Recoded fully the texture manager now based on Qt signal/slots. It handles multithreading loading and downloading of images. As a direct result, loading time is divided by 2!
Now use Qt4.3, and replaced CURL by QtNetwork.
Fixed some date display bugs in config window.
Added new translations for th ml he fil tl eo lt mk