@@ -6,6 +6,7 @@ Continued API cleaning.
 Re-organized the source files into sub-directories.
 Created the new GUI button bars based on QGraphicsView
 Moved stars/planets halo rendering into SkyDrawer.
+Optimized atmosphere computation and others.
 
 0.9.1 [2008-01-17]
 Got rid of autoconf/automake (Hooray!)
